--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,34 +27,36 @@ set(SCREENSROOT ${SRCCLIENT}/screens/)
 set(TOOLSROOT ${SRCCLIENT}/tools/)
 
 set(SRC_ECS
-    ${ECSROOT}Entity/Entity.cpp
-    ${ECSROOT}Entity/Entity.hpp
+    ${ECSROOT}Entity/entity.cpp
+    ${ECSROOT}Entity/entity.hpp
     ${ECSROOT}world.cpp
     ${ECSROOT}world.hpp
-    ${ECSROOT}System/ISystem.hpp
-    ${ECSROOT}Component/Alive/Alive.cpp
-    ${ECSROOT}Component/Alive/Alive.hpp
-    ${ECSROOT}Component/Collide/Collide.cpp
-    ${ECSROOT}Component/Collide/Collide.hpp
-    ${ECSROOT}Component/Destroyable/Destroyable.cpp
-    ${ECSROOT}Component/Destroyable/Destroyable.hpp
-    ${ECSROOT}Component/Drawable2D/Drawable2D.cpp
-    ${ECSROOT}Component/Drawable2D/Drawable2D.hpp
-    ${ECSROOT}Component/Explodable/Explodable.cpp
-    ${ECSROOT}Component/Explodable/Explodable.hpp
-    ${ECSROOT}Component/Inventory/Inventory.cpp
-    ${ECSROOT}Component/Inventory/Inventory.hpp
-    ${ECSROOT}Component/Sound/Sound.cpp
-    ${ECSROOT}Component/Sound/Sound.hpp
-    ${ECSROOT}Component/Transform/Transform.cpp
-    ${ECSROOT}Component/Transform/Transform.hpp
+    ${ECSROOT}Component/Alive/alive.cpp
+    ${ECSROOT}Component/Alive/alive.hpp
+    ${ECSROOT}Component/Collide/collide.cpp
+    ${ECSROOT}Component/Collide/collide.hpp
+    ${ECSROOT}Component/Ship/ship.cpp
+    ${ECSROOT}Component/Ship/ship.hpp
+    ${ECSROOT}Component/Drawable2D/drawable2d.cpp
+    ${ECSROOT}Component/Drawable2D/drawable2d.hpp
+    ${ECSROOT}Component/Projectile/projectile.cpp
+    ${ECSROOT}Component/Projectile/projectile.hpp
+    ${ECSROOT}Component/Inventory/inventory.cpp
+    ${ECSROOT}Component/Inventory/inventory.hpp
+    ${ECSROOT}Component/Sound/sound.cpp
+    ${ECSROOT}Component/Sound/sound.hpp
+    ${ECSROOT}Component/Transform/transform.cpp
+    ${ECSROOT}Component/Transform/transform.hpp
+    ${ECSROOT}Component/Health/health.cpp
+    ${ECSROOT}Component/Health/health.hpp
     ${ECSROOT}Component/IComponent.hpp
-    ${ECSROOT}System/Draw2D/Draw2D.cpp
-    ${ECSROOT}System/Draw2D/Draw2D.hpp
-    ${ECSROOT}System/Movement/Movement.cpp
-    ${ECSROOT}System/Movement/Movement.hpp
-    ${ECSROOT}System/Collide/Collide.cpp
-    ${ECSROOT}System/Collide/Collide.hpp
+    ${ECSROOT}System/Draw2D/draw2d.cpp
+    ${ECSROOT}System/Draw2D/draw2d.hpp
+    ${ECSROOT}System/Movement/movement.cpp
+    ${ECSROOT}System/Movement/movement.hpp
+    ${ECSROOT}System/Collide/collide.cpp
+    ${ECSROOT}System/Collide/collide.hpp
+    ${ECSROOT}System/ISystem.hpp
 )
 
 set(SRC_SCREENS
