[UPD] do not fail if file not found

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,8 @@ jobs:
       - name: DEBUG
         shell: bash
         run: |
-          ls -l
-          ls -l Debug
+          ls -l || true
+          ls -l Debug || true
 
       - name: Check build (Windows)
         if: matrix.os == 'windows-latest'
