[ADD] delete and create doc dir

--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -11,6 +11,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+
+      - name: Delete and create doc directory
+        shell: bash
+        run: |
+          [ -f doc ] && rm -fr doc
+          mkdir -p doc/output
+
       - uses: DenverCoder1/doxygen-github-pages-action@v1.1.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
