[UPD] push pr on main trigger event

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -2,6 +2,11 @@ name: Mirror repo
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 jobs:
 
