--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -12,10 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: DEBUG
-        shell: bash
-        run: |
-          ls -l
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Delete and create doc directory
         shell: bash
