--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -21,12 +21,9 @@ jobs:
           [ -f doc ] && rm -fr doc
           mkdir -p doc/output
 
-      - name: DEBUG
-        shell: bash
-        run: ls -l
-
       - uses: DenverCoder1/doxygen-github-pages-action@v1.1.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           config_file: Doxyfile
+          folder: doc/output
