[UPD] package texlive-font-utils

--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -19,7 +19,9 @@ jobs:
         shell: bash
         run: |
           sudo apt update
-          sudo apt install -y graphviz doxygen texlive-epstopdf
+          sudo apt install -y \
+            doxygen \
+            texlive-font-utils
 
       - name: Run doxygen
         shell: bash
