--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -9,13 +9,13 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
 
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Run doxygen
+      - name: Install dependencies
         shell: bash
         run: |
           sudo apt update
