[ADD] add git as dependency

--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -21,7 +21,8 @@ jobs:
           sudo apt update
           sudo apt install -y \
             doxygen \
-            texlive-font-utils
+            texlive-font-utils \
+            git
 
       - name: Run doxygen
         shell: bash
