[ADD] Merge in game network start in it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,8 @@ set(SRC_SERVER
     ${SRCSERVER}network/Server.hpp
     ${SRCSERVER}network/SafeQueue.hpp
     ${SRCSERVER}network/Client.hpp
+    ${SRCSERVER}Game.cpp
+    ${SRCSERVER}Game.hpp
     ${SRC_ECS}
     ${SRC_UTILS}
 )
