[UPD] add RUNNER env variable

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ on:
     branches:
       - main
   workflow_dispatch:
+env:
+  RUNNER: true
 
 jobs:
   Build:
@@ -27,16 +29,6 @@ jobs:
 
       - name: Build
         run: bash install.sh
-
-      #- name: DEBUG1
-      #  shell: bash
-      #  run: |
-      #    ls -l || true
-
-      #- name: DEBUG2
-      #  shell: bash
-      #  run: |
-      #    ls -l Debug || true
 
       - name: Check build (Windows)
         if: matrix.os == 'windows-latest'
